<resources>
    <string name="area">en</string>
    <string name="app_name">Kaleidoscope</string>
    <string name="slogan">A girl with kaleidoscope eyes</string>

    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="share_kaleidoscope">Found a welfare App "Kaleidoscope", free to watch popular movies, more hidden
        benefits
        and so you come to dig, recommendation ~:%s is great!
    </string>
    <string name="action_kaleido">Kaleido</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_close">Close</string>
    <string name="action_home">Home</string>

    <string name="fragment_kaleido_settings_repo_key">repositories</string>
    <string name="fragment_kaleido_settings_repo_title">Repositories</string>
    <string name="fragment_kaleido_settings_repo_summary">Add repositories that you want to download plugin from
    </string>
    <string name="fragment_kaleido_settings_add_repo">add repository</string>
    <string name="fragment_kaleido_settings_update_key">update</string>
    <string name="fragment_kaleido_settings_update_title">Check for updates</string>

    <string name="donate">If you think my project is helpful to you, please scan the Alipay QR code below.</string>
    <string name="like">like</string>
    <string name="dislike">dislike</string>
    <string name="crazy_mode">＾(￣）￣)《(￣）￣)＾Hey, the crazy mode is enabled, driving safety attention yo～</string>
    <string name="normal_mode">I walked gently, just as I gently came.</string>
    <string name="secret">Tell you a secret，%s</string>
    <string name="secret_crazy">logo four combo opens crazy mode～</string>
    <string name="secret_normal">plugin icon long click exit crazy mode～</string>
    <string name="filter">Filters</string>
    <string name="filter_description">To provide you with colorful kaleidoscope filters.</string>

    <string name="searching">╭ (′▽`)╭(′▽`)╭(′▽`)╯In the crazy search, please go for a stroll first～</string>
    <string name="search_result_not_found">⊙﹏⊙‖∣°Tragedy, no resources available. Please try again...</string>
    <string name="search_result_found">＾(￣）￣)《(￣）￣)＾Hey, found that available resources, driving safety attention yo～
    </string>
    <string name="plugin_initializing">╭ (′▽`)╭(′▽`)╭(′▽`)╯plugin is initializing~</string>
    <string name="plugin_error">⊙﹏⊙‖∣°Tragedy, unexpected error. Please try again...</string>
    <string name="adult_warning">This item contains sexually explicit material and is not intended for children. By
        continuing past this dialog you are stating that you are of legal age and it is legal in your area to view
        pornographic material of sexy Japanese beauties .
    </string>
    <string name="adult_warning_continue">CONTINUE NOW</string>
    <string name="adult_warning_not_18">I AM NOT 18 YEARS OLD</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_check">Check</string>
    <string name="copy_magnet_success">The Magnet Link has been copied to clipboard</string>

    <string name="magneto">Magneto</string>

    <string name="action_mosaic">Mosaic</string>
    <string name="action_save">Save</string>
    <string name="save_to_phone">Saving to phone?</string>
    <string name="save_picture_success">picture saved to %s</string>
    <string name="save_picture_fail">fail to save picture, please try again</string>
    <string name="action_clear">Clear</string>

</resources>
