<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_kaleido"
          android:title="@string/action_kaleido"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_share"
          android:title="@string/action_share"
          app:showAsAction="never"/>

    <item android:id="@+id/action_plugin"
          android:title="@string/action_plugin"
          app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          app:showAsAction="never"/>

    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          app:showAsAction="never"/>
</menu>