<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_search"
          android:orderInCategory="100"
          android:title="@string/action_search"
          app:showAsAction="always"/>

    <item android:id="@+id/action_share"
          android:orderInCategory="100"
          android:title="@string/action_share"
          app:showAsAction="always"/>

    <item android:id="@+id/action_favourite"
          android:orderInCategory="100"
          android:title="@string/action_favourite"
          app:showAsAction="always"/>

    <item android:id="@+id/action_about"
          android:orderInCategory="100"
          android:title="@string/action_about"
          app:showAsAction="never"/>
</menu>